# texas-holdem-kata

./: README.md  pyproject.toml
src/: texas_holdem.py
test/: cards.py  test_cards.py
